Brute-force fix for the overflowing costs on Master Vampire

--- a/app/static/css.esdynamo/styles.less
+++ b/app/static/css.esdynamo/styles.less
@@ -1706,6 +1706,8 @@ li + .between-realms:before, .between-realms:first-of-type:before {
 			padding: 6px 8px 0 0;
 			margin: 0;
 			text-align: right;
+			max-height: 109px;
+			overflow: hidden;
 			
 			[class^="phg-"], [class*=" phg-"] {
 				display: inline-block;
